--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>my-project-be</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>8</java.version>
 		<log4j.version>2.16.0</log4j.version>
 		<springdoc.version>1.6.6</springdoc.version>
 	</properties>
@@ -80,6 +80,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka-dist -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka-dist -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>2.7.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
